<?xml version='1.0' encoding='UTF-8'?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="DUT_Sensor" Id="{5e4e9a12-8121-4b27-a1b4-c219761879b3}">
    <Declaration><![CDATA[
TYPE DUT_Sensor :
STRUCT
    fCntsInEGU:			REAL;
    {attribute 'pytmc' := '
        pv: EU
        io: i
    '}
    sEGU:				STRING;
    sName:				STRING;
    {attribute 'pytmc' := '
        pv: VALUE
        io: i
    '}
    fValue:				REAL;
    {attribute 'pytmc' := '
        pv: RAWCOUNTS
        io: i
    '}
    iRawCnts AT %I*:	INT;
    iOffset:			INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>