<?xml version='1.0' encoding='UTF-8'?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ENUM_LAS_VIS_States" Id="{12faed93-c587-43b5-bc50-35ad94d548bc}">
    <Declaration><![CDATA[
{attribute 'qualified_only'}
TYPE ENUM_LAS_VIS_States :
(
    UNKNOWN := 0,
    Position7to24mm := 1,
    Position62to77mm := 2
) UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>